# deque_deck

./: Cargo.toml  README.md  outputs.txt  speed.txt  speed_100x50000.txt  speed_52x50000.txt
src/: card.rs  deck.rs  lib.rs  playing_card.rs  rank.rs  shuffling.rs  speed_tests.rs  suit.rs
src/cards/: mod.rs  playing_card.rs  rank.rs  set_card.rs
