[package]
name = "deque_deck"
version = "0.1.1"
edition = "2021"
authors = ["SymmetricChaos <ajfraebel@gmail.com>"]
description = "A simple API for manipulating and shuffling a deck of cards."
license = "MIT"
repository = "https://github.com/SymmetricChaos/deque_deck"
keywords = ["cards", "shuffling", "deck", "deque"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"